# dotfiles

./: .gitmodules  fehbg  gitconfig  install.conf.yaml  p10k.zsh  uninstall.py  zshrc
config/i3/: config
fonts/: .uuid
gtk-2.0/: gtkfilechooser.ini
gtk-3.0/: settings.ini
i3/: config
kitty/: kitty.conf  theme.conf
lppm/: globals.conf
lppm/templates/generic_c/: .lppm_template  CMakeLists.txt  Makefile
lppm/templates/generic_c/include/: common.h
lppm/templates/generic_c/src/: main.c
lppm/templates/generic_cpp/: .clang-format  .lppm_template  CMakeLists.txt  Makefile
lppm/templates/generic_cpp/src/: main.cpp
nvim/: .luarc.json  init.lua  lazy-lock.json  lazyvim.json
nvim/after/plugin/: barbar.lua  completion.lua  formatter.lua  image.lua  lspconfig.lua  neotree.lua  persistence.lua  tabby.lua  telescope.lua  treesitter.lua
nvim/lua/config/: keymaps.lua  options.lua
nvim/lua/lifelesspixels/: barbar.lua  init.lua  lualine.lua  packer.lua  remap.lua
nvim/lua/plugins/: tabby.lua  telescope.lua
nvim/plugin/: packer_compiled.lua
nvim/syntax/: lpsyn.vim
nvim_old/after/: syntax
nvim_old/ftdetect/: lpsyn.vim
nvim_old/lua/lifelesspixels/: packer.lua  remap.lua
nvim_old/spell/: en.utf-8.add.spl
oh-my-zsh/themes/: lifelesspixels.zsh-theme
picom/: picom.conf
polybar/: config.ini  launcher.sh
rofi/launchers/type-1/: style-10.rasi
rofi/launchers/type-1/shared/: fonts.rasi
